aksonometria, kraszewskiego ukonczone

--- a/en/portfolio/kraszewskiego.html
+++ b/en/portfolio/kraszewskiego.html
@@ -121,27 +121,27 @@
         <div class="flex items-center flex-col w-full lg:w-3/4">
           <div>
             <p class="pt-4">
-              The subject of the study is an architectural con- ception of a
-              multi-family residential building lo- cated on plots 26 and 28 on
+              The subject of the study is an architectural conception of a
+              multi-family residential building located on plots 26 and 28 on
               Kraszewskiego street in Poznań. The study has been divided into
               three project stages. The first stage includes detailed analyses
               of the plot and the immediate area of the ul. Kraszewskiego. The
               conclusions drawn from the analyses have formed fundamental
-              requirements in the subsequent project stage of the study. Ba- sed
+              requirements in the subsequent project stage of the study. Based
               on said requirements, an object was created, with a structure
               well-suited to its surroundings. The functional-utility program
               has been designed in line with ergonomic principles, moreover the
               entire facility has been adapted for accessibilty needs of people
               with disabilties. The solutions described in the architectural and
               construction description have been formulated based on applicable
-              con- ditions and legal standards.
+              conditions and legal standards.
             </p>
             <p>
-              Polish society is characterized by a high incre- ase in the median
+              Polish society is characterized by a high increase in the median
               age, which has increased from 25.8 to 38.2 over the course of
               seventy-two years. Many existing, but also newly built,
               architectural structures are not adapted to the needs of the
-              future society. The life cycle of a building in Po- land is
+              future society. The life cycle of a building in Poland is
               approximately one hundred years, and the expected median age in
               2050 is to be fifty years. It follows that most buildings,
               especially those with a residential function, will lose their
@@ -149,7 +149,7 @@
               place in the user.
             </p>
             <p>
-              The project is an attempt to respond to the ne- eds of the
+              The project is an attempt to respond to the needs of the
               recipient not only at the moment, but also in the future. By
               ensuring the appropriate functionality of the building for users
               in different age groups.
@@ -162,7 +162,7 @@
               Axonometric
             </h2>
             <img
-              src="../assets/kraszewskiego/AKSONOMETRIA.jpg"
+              src="../../assets/kraszewskiego/axonometry_en.jpg"
             />
           </div>
 
@@ -180,7 +180,7 @@
               </h3>
               <img
                 class="pt-1"
-                src="../assets/kraszewskiego/-1-1.jpg"
+                src="../../assets/kraszewskiego/-1-1.jpg"
               />
             </div>
             <div>
@@ -192,7 +192,7 @@
               <img
                 loading="lazy"
                 class="pt-1"
-                src="../assets/kraszewskiego/0-1.jpg"
+                src="../../assets/kraszewskiego/0-1.jpg"
               />
             </div>
             <div>
@@ -204,7 +204,7 @@
               <img
                 loading="lazy"
                 class="pt-1"
-                src="../assets/kraszewskiego/+1-1.jpg"
+                src="../../assets/kraszewskiego/+1-1.jpg"
               />
             </div>
             <div>
@@ -216,7 +216,7 @@
               <img
                 loading="lazy"
                 class="pt-1"
-                src="../assets/kraszewskiego/4-1.jpg"
+                src="../../assets/kraszewskiego/4-1.jpg"
               />
             </div>
           </div>
@@ -229,7 +229,7 @@
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../assets/kraszewskiego/detail.jpg"
+              src="../../assets/kraszewskiego/detail.jpg"
             />
           </div>
           <div class="pb-4">
@@ -241,17 +241,17 @@
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../assets/kraszewskiego/kraszewskiego.png"
+              src="../../assets/kraszewskiego/kraszewskiego.png"
             />
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../assets/kraszewskiego/bird.jpg"
+              src="../../assets/kraszewskiego/bird.jpg"
             />
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../assets/kraszewskiego/inside.jpg"
+              src="../../assets/kraszewskiego/inside.jpg"
             />
           </div>
           <div class="pb-4">
@@ -263,12 +263,12 @@
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../assets/kraszewskiego/model1.jpg"
+              src="../../assets/kraszewskiego/model1.jpg"
             />
             <img
               loading="lazy"
               class="pt-1 w-full text-center"
-              src="../assets/kraszewskiego/model2.jpg"
+              src="../../assets/kraszewskiego/model2.jpg"
             />
           </div>
         </div>
