en portfolio template

--- a/en/portfolio/pool.html
+++ b/en/portfolio/pool.html
@@ -77,11 +77,6 @@
                     >About me</a
                   >
                   <a
-                    href="../index.html#resume"
-                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                    >Resume</a
-                  >
-                  <a
                     href="../index.html#contact"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Contact</a
@@ -107,11 +102,6 @@
               >About me</a
             >
             <a
-              href="../index.html#resume"
-              class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
-              >Resume</a
-            >
-            <a
               href="../index.html#contact"
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               >Contact</a
@@ -123,8 +113,8 @@
 
     <section class="pt-10 px-3">
       <div class="w-full flex items-center flex-col">
-        <h1 class="bg-white top-16 sticky text-2xl text-center w-full uppercase">
-          Swimming pool by Cybina river
+        <h1 class="bg-white top-16 sticky text-2xl text-center w-full">
+          SWIMMING POOL BY CYBINA RIVER
         </h1>
         <div class="flex items-center flex-col w-full lg:w-3/4">
           <div>
@@ -156,5 +146,7 @@
         </div>
       </div>
     </section>
+    
+    <script src="script.js"></script>
   </body>
 </html>
