--- a/en/portfolio/stable.html
+++ b/en/portfolio/stable.html
@@ -77,11 +77,6 @@
                     >About me</a
                   >
                   <a
-                    href="../index.html#resume"
-                    class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
-                    >Resume</a
-                  >
-                  <a
                     href="../index.html#contact"
                     class="text-gray-900 hover:border-b hover:border-b-gray-800 px-3 py-2 text-sm font-medium"
                     >Contact</a
@@ -105,11 +100,6 @@
               class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
               aria-current="page"
               >About me</a
-            >
-            <a
-              href="../index.html#resume"
-              class="text-gray-900 hover:border-b hover:border-b-gray-800 block px-3 py-2 text-base font-medium"
-              >Resume</a
             >
             <a
               href="../index.html#contact"
@@ -156,5 +146,7 @@
         </div>
       </div>
     </section>
+    
+    <script src="script.js"></script>
   </body>
 </html>
