--- a/portfolio/pool.html
+++ b/portfolio/pool.html
@@ -131,57 +131,46 @@
         <h1
           class="bg-white top-16 sticky text-2xl text-center w-full uppercase z-30"
         >
-          Kraszewskiego 28
+        Basen nad rzeką Cybiną
         </h1>
         <div class="flex items-center flex-col w-full lg:w-3/4">
           <div>
             <p class="pt-4">
-              Przedmiotem pracy jest stworzenie koncepcji budynku mieszkalnego,
-              wielorodzinnego na dział- ce 26 i 28 przy ulicy Kraszewskiego w
-              Poznaniu. Praca została podzielona na trzy etapy projektowe.
-              Pierwszy z nich stanowi część analityczną, zawierającą szczegółowe
-              analizy opracowywanego obszaru oraz okolicy ulicy Kraszewskiego.
-              Wnioski z przeprowadzonych analiz stanowiły wytyczne do
-              projektowego etapu pracy. W oparciu o nie powstał obiekt wpisujący
-              się w otoczenie swoją formą. Program funkcjonalny został stworzony
-              zgodnie z zasadami ergonomii, ponadto całość obiektu została
-              dostosowana do potrzeb osób z niepełnosprawnościami. Rozwiązania w
-              opisie architektoniczno-budowlanym zostały opisane na podstawie
-              obowiązujących warunków oraz norm prawnych.
+              Przedmiotem opracowania jest koncepcja architektoniczna budynku rekreacyjnego zlokalizowanego na działkach 24/6, 21 i 20/11 przy ulicy
+              Jana Pawła II w Poznaniu.
             </p>
             <p>
-              Polskie społeczeństwo charakteryzuje się wysokim wzrostem mediany
-              wieku, która na przestrzeni siedemdziesięciu dwóch lat wzrosła z
-              25,8 do 38,2 lat. Wiele istniejących, ale także nowo powstają-
-              cych obiektów architektonicznych nie jest dosto- sowanych do
-              potrzeb przyszłego społeczeństwa. Cykl życia budynku w Polsce
-              wynosi około stu lat, a przewidywana mediana wieku w 2050 roku ma
-              wynieść pięćdziesiąt lat. Wynika z tego, że większość budynków,
-              zwłaszcza tych o funkcji mieszkalnej, w niedalekiej przyszłości
-              straci swoją funkcjonalność w związku ze zmianami, jakie zajdą w
-              użytkowniku.
+              Działka znajduje się w bezpośrednim sąsiedztwie terenów zielonych. W pobliżu rzeka Warta i
+              jezioro Malta. Teren zabudowy pokryty jest dużą
+              ilością zieleni zarówno wysokiej jak i niskiej, jednak większość stanowiły dzikie krzewy i młode
+              drzewa. Założeniem projektowym było zachowanie jak największej ilości istniejącej zieleni oraz
+              posadzenie większej ilości wysokich drzew.
             </p>
             <p>
-              Projekt jest próbą odpowiedzi na potrzeby odbiorcy nie tylko w
-              chwili obecnej, ale również w przyszłości. Poprzez zapewnienie
-              odpowiedniej funkcjonalności budynku dla użytkowników w róż- nych
-              grupach wiekowych.
+              Kształt działki jest nieregularny. Celem projektowym było wyrównanie terenu w części działki
+              frontowej, tak aby zapewnić swobodny ruch kołowy i pieszy. Tylna część pozostała zachowana w
+              stanie istniejącym. Kształt terenu badań miał istotny wpływ na proces projektowania i ostateczną
+              formę budynku.
             </p>
           </div>
           <div class="py-4">
             <h2
               class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg text-center w-full"
             >
-              Aksonometria
+              Analizy
             </h2>
-            <img src="../assets/kraszewskiego/AKSONOMETRIA.jpg" />
+            <div class="flex">
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
           </div>
 
           <div class="py-4">
             <h2
               class="sticky top-14 bg-white z-20 pt-10 uppercase text-lg w-full text-center"
             >
-              Rzuty
+              Projekt zagospodarowania terenu
             </h2>
             <div>
               <h3
